benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-mix004.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix004.opt.yml/mix004.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix004.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_zf2eou1g/tmp/tmp67og9nes.c
Compilation started
/tmp/BenchExec_run_zf2eou1g/tmp/tmp67og9nes.c: In function ‘P2’:
/tmp/BenchExec_run_zf2eou1g/tmp/tmp67og9nes.c:618:19: error: ‘FALSE’ undeclared (first use in this function)
  618 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_zf2eou1g/tmp/tmp67og9nes.c:618:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_zf2eou1g/tmp/tmp67og9nes.c: In function ‘P3’:
/tmp/BenchExec_run_zf2eou1g/tmp/tmp67og9nes.c:659:19: error: ‘FALSE’ undeclared (first use in this function)
  659 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_zf2eou1g/tmp/tmp67og9nes.c:660:19: error: ‘TRUE’ undeclared (first use in this function)
  660 |   weak$$choice2 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
